# gpui-component

./: .gitignore  CLAUDE.md  Cargo.toml  README.zh-CN.md  flake.nix
.claude/skills/gpui-component-dev/: SKILL.md
.claude/skills/gpui-component-dev/references/: documentation.md  new-component.md  pr-description.md  story.md
.github/workflows/: release-docs.yml
crates/assets/: Cargo.toml  build.rs
crates/macros/src/: lib.rs
crates/story/: Cargo.toml
crates/story-web/src/: lib.rs
crates/story-web/www/src/: main.js
crates/story/examples/: dock.rs  editor.rs  markdown.rs  stream_markdown.rs  tiles.rs
crates/story/examples/fixtures/: test.html  test.md
crates/story/src/: app_menus.rs  gallery.rs  lib.rs  main.rs  title_bar.rs
crates/story/src/stories/: alert_dialog_story.rs  checkbox_story.rs  combobox_story.rs  data_table_story.rs  date_picker_story.rs  description_list_story.rs  dropdown_button_story.rs  form_story.rs  hover_card_story.rs  input_story.rs  menu_story.rs  mod.rs  native_menu_story.rs  notification_story.rs  number_input_story.rs  popover_story.rs  progress_story.rs  resizable_story.rs  select_story.rs  separator_story.rs  settings_story.rs  sidebar_story.rs  slider_story.rs  spinner_story.rs  status_bar_story.rs  switch_story.rs  tabs_story.rs  textarea_story.rs  toggle_story.rs  tooltip_story.rs  tree_story.rs  virtual_list_story.rs
crates/story/src/stories/chart_story/: chart_story.rs  stacked_bar_chart.rs
crates/story/src/stories/theme_story/: checkerboard.rs  color_theme_story.rs
crates/ui/: Cargo.toml
crates/ui/src/: anchored.rs  animation.rs  breadcrumb.rs  checkbox.rs  clipboard.rs  color_picker.rs  combobox.rs  description_list.rs  dialog.rs  global_state.rs  hover_card.rs  icon.rs  inspector.rs  kbd.rs  lib.rs  mcp.rs  notification.rs  popover.rs  radio.rs  root.rs  select.rs  separator.rs  slider.rs  status_bar.rs  styled.rs  switch.rs  title_bar.rs  tooltip.rs  virtual_list.rs  window_border.rs
crates/ui/src/button/: button.rs  dropdown_button.rs  toggle.rs
crates/ui/src/chart/: bar_chart.rs
crates/ui/src/dialog/: dialog.rs
crates/ui/src/dock/: mod.rs  tab_panel.rs  tiles.rs
crates/ui/src/highlighter/: highlighter.rs
crates/ui/src/input/: element.rs  input.rs  mod.rs  mode.rs  movement.rs  number_input.rs  otp_input.rs  search.rs  state.rs
crates/ui/src/input/display_map/: display_map.rs  folding.rs  text_wrapper.rs
crates/ui/src/input/lsp/: mod.rs  semantic_tokens.rs
crates/ui/src/input/popovers/: code_action_menu.rs  completion_menu.rs  context_menu.rs  mod.rs
crates/ui/src/list/: list.rs  list_item.rs
crates/ui/src/menu/: app_menu_bar.rs  context_menu.rs  popup_menu.rs
crates/ui/src/native_menu/: fallback.rs  macos.rs  mod.rs  windows.rs
crates/ui/src/plot/: mod.rs
crates/ui/src/progress/: progress.rs  progress_circle.rs
crates/ui/src/resizable/: mod.rs  panel.rs
crates/ui/src/scroll/: scrollable_mask.rs  scrollbar.rs
crates/ui/src/searchable_list/: adapter.rs  item.rs
crates/ui/src/setting/: item.rs  page.rs  settings.rs
crates/ui/src/setting/fields/: bool.rs  dropdown.rs  string.rs
crates/ui/src/sidebar/: menu.rs  mod.rs
crates/ui/src/tab/: tab.rs  tab_bar.rs
crates/ui/src/table/: column.rs  data_table.rs  state.rs  table.rs
crates/ui/src/text/: inline.rs  mod.rs  node.rs  state.rs  text_view.rs  window_selection.rs
crates/ui/src/text/format/: html.rs  markdown.rs
crates/ui/src/theme/: mod.rs  schema.rs  theme_color.rs
crates/ui/src/time/: calendar.rs  date_picker.rs
crates/webview/: Cargo.toml  README.md
crates/webview/src/: lib.rs  linux.rs
docs/: contributors.vue  index.md  index.vue  skills.vue
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: LanguageSwitcher.vue
docs/data/: repo.data.js  skills.data.js
docs/docs/: assets.md  getting-started.md  index.md  installation.md  root.md
docs/docs/components/: index.md  menu.md  popover.md  select.md
docs/zh-CN/: contributors.md  index.md  skills.md
docs/zh-CN/docs/: assets.md  context.md  element_id.md  getting-started.md  index.md  installation.md  root.md  theme.md
docs/zh-CN/docs/components/: accordion.md  alert-dialog.md  alert.md  avatar.md  badge.md  button.md  calendar.md  chart.md  checkbox.md  clipboard.md  collapsible.md  color-picker.md  combobox.md  data-table.md  date-picker.md  description-list.md  dialog.md  dropdown_button.md  editor.md  focus-trap.md  form.md  group-box.md  hover-card.md  icon.md  image.md  index.md  input.md  kbd.md  label.md  list.md  menu.md  notification.md  number-input.md  otp-input.md  pagination.md  plot.md  popover.md  progress.md  radio.md  rating.md  (+20 more)
examples/root_borderless/: Cargo.toml
examples/root_borderless/src/: main.rs
examples/sidebar/: Cargo.toml
examples/sidebar/src/: main.rs
examples/text_selection/: Cargo.toml
examples/text_selection/src/: main.rs
examples/tooltip_top_edge/: Cargo.toml
examples/tooltip_top_edge/src/: main.rs
examples/webview/: Cargo.toml
examples/webview/src/: main.rs
skills/gpui-component/: SKILL.md
skills/gpui-component/references/: style-guide.md  usage.md
skills/gpui/references/: action.md  async.md  event.md  focus-handle.md  global.md
