[package]
name = "gpui-wry"
description = "WebView support for GPUI, based on Wry."
keywords = ["webview", "gpui","wry"]
license = "Apache-2.0"
documentation = "https://docs.rs/gpui-component"
homepage = "https://longbridge.github.io/gpui-component"
repository = "https://github.com/longbridge/gpui-component/tree/main/crates/webview"
readme = "README.md"
edition.workspace = true
publish = true
version = "0.5.0"

[features]
inspector = ["wry/devtools"]

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
raw-window-handle.workspace = true
wry = { version = "0.53.3", package = "lb-wry" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
smol.workspace = true
