[package]
name = "sidebar"
description = "Example demonstrating shadcn-style sidebar collapsible modes (icon, offcanvas, none)."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

[lints]
workspace = true
