[package]
name = "tooltip_top_edge"
description = "Example demonstrating tooltip placement near the top window edge."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component = { workspace = true }

[lints]
workspace = true
